# prswipe

./: .env.template  .gitignore  README.md  docker-compose.yml  pre-commit.bat
backend/: .gitignore  Dockerfile  config.py  main.py  pyproject.toml
backend/api/: prs.py  repos.py  router.py
backend/auth/: github_oauth.py  router.py  session.py
backend/github/: client.py
backend/models/: bio.py  schemas.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx
frontend/src/api/: auth.ts  client.ts  prs.ts  repos.ts
frontend/src/components/actions/: ActionButtons.tsx
frontend/src/components/cards/: AdCard.tsx  PRCard.tsx  PRCardStack.tsx  SwipeOverlay.tsx
frontend/src/components/layout/: Header.tsx  PageWrapper.tsx
frontend/src/components/repo/: RepoCard.tsx
frontend/src/components/ui/: ErrorToast.tsx  LoadingCard.tsx
frontend/src/hooks/: useSwipe.ts
frontend/src/pages/: AllCaughtUpPage.tsx  AuthPage.tsx  LoginPage.tsx  RepoSelectPage.tsx  SwipePage.tsx
frontend/src/store/: authStore.ts  prStore.ts
frontend/src/styles/: globals.css
