[project]
name = "prswipe-backend"
version = "0.1.0"
description = "PR Swipe Backend API"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "itsdangerous>=2.1.0",
    "starlette>=0.37.0",
    "python-multipart>=0.0.9",
]
